Menu >>> Fixed stretching of Control icons

--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,13 @@
-/* Fira Code */
-/* @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&family=Fira+Sans:ital,wght@0,200;0,300;0,400;0,500;0,700;1,200;1,300;1,400;1,500;1,700&display=swap'); */
+/* Roboto */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-/* Overpass */
-@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap');
-
-html { 
+html {
   background-color: #222831;
 }
 
 body {
   margin: 0;
-  /* font-family: 'Fira Sans', sans-serif; */
-  font-family: 'Overpass', sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overscroll-behavior: none;
